# workspace

./: .dockerignore  .env.example  .fallowrc.json  .gitignore  AGENTS.md  API_INTEGRATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  INVITATION_SYSTEM.md  WORKSPACE_API_DOCUMENTATION.md  audit_final.json  build_output.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  e2e_output.txt  fallow_output.txt  fallow_results.json  fallow_results_2.json  fix-imports.sh  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  readme.md  restructure.sh  result.json  test-m2m.ts  test_output.txt  turbo.json
.changeset/: auto-android-1783928864.md  auto-release-871e0744.md  auto-release-92baf775.md  chatty-boxes-juggle.md  config.json  famous-otters-tap.md  humble-showers-bathe.md  late-rooms-throw.md  modern-guests-cheer.md  pre.json  pretty-cities-draw.md  seven-things-doubt.md  shaky-boats-lick.md  some-pens-hang.md
.jules/: bolt.md
app/: layout.tsx  page.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
components/: admin-settings.tsx  assistant-channel.tsx  calendar-context-menu.tsx  calendar-integrations-dialog.tsx  calendar-view.tsx  context-menu.tsx  create-channel-dialog.tsx  create-workspace-dialog.tsx  custom-emoji-picker.tsx  dynamic-header.tsx  emoji-picker.tsx  event-create-edit-dialog.tsx  file-upload.tsx  gantt-chart.tsx  info-panel.tsx  (+32 more)
(+977 files in other folders)
