[package]
name = "desktop"
version = "0.0.500"
description = "Scrymechat Desktop Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
name = "desktop_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image"] }
tauri-plugin-shell = "2.1"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-os = "2.1"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-single-instance = "2.4.2"
alloc-no-stdlib = "=2.0.4"
alloc-stdlib = "=0.2.2"
brotli = "=8.0.1"
brotli-decompressor = "=5.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
